# polimi-robotics-projects

./: .gitignore  README.md
project1/catkin_ws/src/first_project/: CMakeLists.txt  info.txt  package.xml  readme.txt
project1/catkin_ws/src/first_project/launch/: first_project.launch  launch.launch
project1/catkin_ws/src/first_project/msg/: Sector_times.msg
project1/catkin_ws/src/first_project/rviz/: config.rviz
project1/catkin_ws/src/first_project/src/: gps_odometer.cpp  odometer.cpp  sector_times.cpp
project2/catkin_ws/src/second_project/: CMakeLists.txt  info.txt  package.xml
project2/catkin_ws/src/second_project/cfg/: costmap_common_params.yaml  dwa_local_planner_params.yaml  local_costmap_params.yaml  move_base_params.yaml  slam_config.yaml  teb_local_planner_params.yaml
project2/catkin_ws/src/second_project/csv/: goals.csv
project2/catkin_ws/src/second_project/launch/: amcl.launch  amcl.launch.xml  launch.launch  mapping.launch  move_base.launch  navigation.launch  robot_amcl.launch  savemap.launch  slam_mapping.launch
project2/catkin_ws/src/second_project/map/: map.pgm  map.yaml  map2.pgm  map2.yaml  map3.pgm  map3.yaml  test.yaml
project2/catkin_ws/src/second_project/map/stage/: map.world  robot.inc  turtlebot.inc
project2/catkin_ws/src/second_project/rviz/: mapping.rviz  navigation.rviz  robot_navigation.rviz
project2/catkin_ws/src/second_project/src/: convert_odom.cpp  mapping.cpp  send_goal.cpp
project2/catkin_ws/src/second_project/stage/: map.world  robot.inc
project2/data/: map.pgm  map.yaml
